tests/specs/export_type_alias_literal.txt
# mod.ts
export type A = {
  new (d: string): A;
  a(): void;
  b?(): void;
  get c(): string;
  set c(v: number);
};

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export type A = {
  | ^


# output.txt
Defined in file:///mod.ts:1:1

type A = { new(d: string): A; a(): void; b?(): void; c(): string; c(v: number); }


# output.json
[
  {
    "kind": "typeAlias",
    "name": "A",
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "typeAliasDef": {
      "tsType": {
        "repr": "",
        "kind": "typeLiteral",
        "typeLiteral": {
          "methods": [
            {
              "name": "new",
              "jsDoc": {},
              "kind": "method",
              "params": [
                {
                  "kind": "identifier",
                  "name": "d",
                  "optional": false,
                  "tsType": {
                    "repr": "string",
                    "kind": "keyword",
                    "keyword": "string"
                  }
                }
              ],
              "optional": false,
              "returnType": {
                "repr": "A",
                "kind": "typeRef",
                "typeRef": {
                  "typeParams": null,
                  "typeName": "A"
                }
              },
              "typeParams": []
            },
            {
              "name": "a",
              "jsDoc": {},
              "kind": "method",
              "params": [],
              "optional": false,
              "returnType": {
                "repr": "void",
                "kind": "keyword",
                "keyword": "void"
              },
              "typeParams": []
            },
            {
              "name": "b",
              "jsDoc": {},
              "kind": "method",
              "params": [],
              "optional": true,
              "returnType": {
                "repr": "void",
                "kind": "keyword",
                "keyword": "void"
              },
              "typeParams": []
            },
            {
              "name": "c",
              "jsDoc": {},
              "kind": "getter",
              "params": [],
              "optional": false,
              "returnType": {
                "repr": "string",
                "kind": "keyword",
                "keyword": "string"
              },
              "typeParams": []
            },
            {
              "name": "c",
              "jsDoc": {},
              "kind": "setter",
              "params": [
                {
                  "kind": "identifier",
                  "name": "v",
                  "optional": false,
                  "tsType": {
                    "repr": "number",
                    "kind": "keyword",
                    "keyword": "number"
                  }
                }
              ],
              "optional": false,
              "returnType": null,
              "typeParams": []
            }
          ],
          "properties": [],
          "callSignatures": [],
          "indexSignatures": []
        }
      },
      "typeParams": []
    }
  }
]
